# HoudiniLives

./: README.md
managed/app/: build.gradle
managed/app/src/androidTest/java/com/example/managed/: ExampleInstrumentedTest.java
managed/app/src/main/: AndroidManifest.xml
managed/app/src/main/java/com/example/managed/: MainActivity.java  NativeLibA.java  NativeLibB.java
managed/app/src/main/res/layout/: activity_main.xml
managed/app/src/main/res/values/: strings.xml
managed/app/src/test/java/com/example/managed/: ExampleUnitTest.java
managed/gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  android-toolchain.cmake  build.gradle  com_example_managed_NativeLibA.c  com_example_managed_NativeLibA.h  com_example_managed_NativeLibB.c  com_example_managed_NativeLibB.h
